--- a/manage-web/package.json
+++ b/manage-web/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.1.10",
     "ant-design-pro": "^2.3.2",
     "antd": "^4.16.13",
+    "axios": "^0.24.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
